--- a/Makefile1.0
+++ b/Makefile1.0
@@ -1,22 +1,16 @@
-## makefile   
-#  
+SRC_FILES:= hello.cpp main.cpp  
+OBJS:=$(SRC_FILES:.cpp=.o)  
+DEPS:=$(OBJS:.o=.d)  
+TARGET:=hello.exe  
   
-## 定义obj文件的编译规则  
-hello.o : hello.cpp hello.h
-	g++ -Wall -c $< -o $@  
-main.o : main.cpp hello.h
-	g++ -Wall -c $< -o $@  
+## -MMD 可以用于自动生成头文件依赖关系  
+%.o : %.cpp
+	$(CXX) $(CXXFLAGS) -MMD -MP -MF"$(@:%.o=%.d)" -MT"$@" -MT"$(@:%.o=%.d)" -c "$<" -o "$@"
+
+ifneq "$(MAKECMDGOALS)" "clean"  
+-include $(DEPS)  
+endif  
       
 ## 定义可执行文件hello.exe的编译规则      
-hello:  hello.o main.o  
-	g++ -Wall  -o $@ $^
-  
-## 约定俗成，大家已经习惯性的总是将all默认的make终极目标。  
-## 在这个例子中，就是生成hello.exe   
-.PHONY : all  
-all:    hello  
-  
-## 定义 目标clean，一般就是删除所有obj文件，以及可执行文件。  
-.PHONY : clean  
-clean:  
-	rm -f hello.o main.o hello
+$(TARGET):  $(OBJS)  
+	$(CXX) $(CXXFLAGS)  -o $@ $^ 
